# feeltrack-backend

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  render.yaml  requirements.txt  subir_modelo.py
api/: main.py
data/processed/: final_clean_dataset.csv
extraction/apis/: tiktok-comments.py  youtube-comments.py
notebooks/: 1.0-bsrc-eda.ipynb  1.0-pjzd-eda.ipynb
notebooks/raa/: 0.1-raa-eda.ipynb  0.2-rra-eda.ipynb  0.3-rra-eda.ipynb  2.0-raa-train-model.ipynb
review_analyzer/: config.py  dataset.py  plots.py
